[gd_scene load_steps=90 format=3 uid="uid://c27fe3qnrj4ms"]

[ext_resource type="Script" uid="uid://cq25r8g6qlw17" path="res://player.gd" id="1_8m1ne"]
[ext_resource type="Texture2D" uid="uid://t57kw0wqc4jq" path="res://текстуры/stand_TV/stand0.png" id="1_gbacm"]
[ext_resource type="Texture2D" uid="uid://4601rhsbxkah" path="res://текстуры/stand_TV/stand1.png" id="2_7ncr1"]
[ext_resource type="PackedScene" uid="uid://cn78231br5yqe" path="res://boom.tscn" id="2_l4htu"]
[ext_resource type="PackedScene" uid="uid://dfo3gpmlnp5h6" path="res://bullet.tscn" id="2_xbhkx"]
[ext_resource type="Texture2D" uid="uid://n2opf74806yj" path="res://текстуры/stand_TV/stand2.png" id="3_17o13"]
[ext_resource type="SpriteFrames" uid="uid://bq2cacsi7h0bx" path="res://player.tres" id="3_pgbbb"]
[ext_resource type="Texture2D" uid="uid://cdta60wew2pkc" path="res://текстуры/stand_TV/stand3.png" id="4_83el5"]
[ext_resource type="Texture2D" uid="uid://dyfcw5wtxd6rn" path="res://текстуры/stand_TV/stand4.png" id="5_ds0uf"]
[ext_resource type="Texture2D" uid="uid://dxngcbjcg8cep" path="res://текстуры/stand_TV/stand5.png" id="6_eldy8"]
[ext_resource type="Texture2D" uid="uid://c03g01bbvha4l" path="res://текстуры/stand_TV/stand6.png" id="7_flhgb"]
[ext_resource type="Texture2D" uid="uid://bioctikv22i45" path="res://текстуры/stand_TV/stand7.png" id="8_2lfeo"]
[ext_resource type="Texture2D" uid="uid://cuvdcruugsg4g" path="res://текстуры/stand_TV/stand8.png" id="9_r6qqh"]
[ext_resource type="Texture2D" uid="uid://duy5yemg3h8re" path="res://текстуры/stand_TV/stand9.png" id="10_0xpfk"]
[ext_resource type="Texture2D" uid="uid://d17k3dde1qgxl" path="res://текстуры/stand_TV/stand10.png" id="11_errf3"]
[ext_resource type="Texture2D" uid="uid://dns4q3ecwy50j" path="res://текстуры/stand_TV/stand11.png" id="12_hl0fj"]
[ext_resource type="Texture2D" uid="uid://brdh03n5oaflg" path="res://текстуры/stand_TV/stand12.png" id="13_uasq8"]
[ext_resource type="Texture2D" uid="uid://b54tmptik88uu" path="res://текстуры/stand_TV/stand14.png" id="14_vk6ch"]
[ext_resource type="Texture2D" uid="uid://2wcrsb81w2m6" path="res://текстуры/stand_TV/stand13.png" id="15_edyxc"]
[ext_resource type="Texture2D" uid="uid://ct5083fhxqcij" path="res://текстуры/stand_TV/stand15.png" id="16_lld4l"]
[ext_resource type="Texture2D" uid="uid://wwrxv6m0j1gk" path="res://текстуры/stand_TV/stand16.png" id="17_leqwp"]
[ext_resource type="Texture2D" uid="uid://soqs1hfaiqlo" path="res://текстуры/stand_TV/stand17.png" id="18_wgm1t"]
[ext_resource type="Texture2D" uid="uid://cqpmrerv4rdu5" path="res://текстуры/stand_TV/stand18.png" id="19_1anmt"]
[ext_resource type="Texture2D" uid="uid://vkk1vjwn7crq" path="res://текстуры/stand_TV/stand19.png" id="20_sq808"]
[ext_resource type="Texture2D" uid="uid://q3p17etmmu23" path="res://текстуры/stand_TV/stand21.png" id="21_1iryp"]
[ext_resource type="Texture2D" uid="uid://bf5j5vwkxr53y" path="res://текстуры/stand_TV/stand20.png" id="22_ltqd7"]
[ext_resource type="Texture2D" uid="uid://cbqw1wefwiwrh" path="res://текстуры/stand_TV/stand22.png" id="23_cjbfv"]
[ext_resource type="Texture2D" uid="uid://bcrid2x28818o" path="res://текстуры/stand_TV/stand23.png" id="24_thfu4"]
[ext_resource type="Texture2D" uid="uid://cqmbmiixqt31w" path="res://ui/Untitled 03-13-2024 10-01-45.png" id="60_mu4fn"]
[ext_resource type="Texture2D" uid="uid://cicxjimgddfkc" path="res://ui/Untitled 03-13-2024 10-01-451.png" id="61_pwn7i"]
[ext_resource type="Texture2D" uid="uid://boqdfrp71gn3o" path="res://текстуры/Untitled 03-11-2024 08-48-21.png" id="65_hrq5w"]
[ext_resource type="Texture2D" uid="uid://bfj5ltqyrd18c" path="res://текстуры/land/pix1.png" id="65_tq6ju"]
[ext_resource type="Texture2D" uid="uid://drlhlqr55jjw0" path="res://ui/Untitled 03-11-2024 08-48-213.png" id="66_ibxnd"]
[ext_resource type="Texture2D" uid="uid://dfp3tcbjroq3j" path="res://текстуры/land/pix2.png" id="66_rix2p"]
[ext_resource type="Texture2D" uid="uid://b3v3rwv5ahdfx" path="res://ui/Untitled 03-11-2024 08-48-21.png" id="67_jfmbj"]
[ext_resource type="Texture2D" uid="uid://du1xv8pax38dc" path="res://текстуры/land/pix3.png" id="67_jpdad"]
[ext_resource type="AudioStream" uid="uid://b6gd3p2ehsg8b" path="res://текстуры/sound/jump.mp3" id="67_v58pc"]
[ext_resource type="Texture2D" uid="uid://b5b0tre0hrd84" path="res://текстуры/mobile_control/salt0.png" id="68_6rhxx"]
[ext_resource type="AudioStream" uid="uid://c3x81i1us0cwj" path="res://текстуры/sound/land.mp3" id="68_qmmh8"]
[ext_resource type="Texture2D" uid="uid://pwjw83wv0mnq" path="res://текстуры/land/pix4.png" id="68_tqp67"]
[ext_resource type="Texture2D" uid="uid://dcoxuhyba6ieb" path="res://текстуры/mobile_control/salt1.png" id="69_aic7l"]
[ext_resource type="Script" uid="uid://cr8jo7ea12fkm" path="res://blaster.gd" id="69_fr3kn"]
[ext_resource type="Texture2D" uid="uid://b76se51gqdco5" path="res://текстуры/mobile_control/hit0.png" id="70_h76ni"]
[ext_resource type="Texture2D" uid="uid://nmnmja5any4s" path="res://текстуры/mobile_control/hit1.png" id="71_w2dpe"]
[ext_resource type="Texture2D" uid="uid://d4mhpxxx3vwwg" path="res://ui/Untitled 03-13-2024 10-01-452.png" id="72_ql4mh"]
[ext_resource type="Texture2D" uid="uid://dfxladixl1rvw" path="res://ui/Untitled 03-13-2024 10-01-453.png" id="73_6v0j8"]
[ext_resource type="Texture2D" uid="uid://b3loc2bqtjq2r" path="res://текстуры/recharge.png" id="73_vihgm"]
[ext_resource type="Texture2D" uid="uid://mw2fuxpygtm4" path="res://текстуры/mobile_control/2.png" id="74_276gg"]
[ext_resource type="Texture2D" uid="uid://c586ok4ugg17m" path="res://текстуры/mobile_control/1.png" id="75_6tot8"]
[ext_resource type="Texture2D" uid="uid://nbe7amj50n51" path="res://текстуры/mobile_control/button2.png" id="76_7ua45"]
[ext_resource type="Texture2D" uid="uid://dqpw2xfhxh2fw" path="res://текстуры/mobile_control/button1.png" id="77_tucw7"]
[ext_resource type="Texture2D" uid="uid://coo0ph10foodc" path="res://текстуры/mobile_control/boom_buttom1.png" id="78_y4fi5"]
[ext_resource type="Texture2D" uid="uid://dcbii2qt2h07a" path="res://текстуры/mobile_control/boom_buttom2.png" id="79_ukxdx"]
[ext_resource type="Script" uid="uid://ddpebavxlo2i7" path="res://joystick/joystick.gd" id="81_1mwr7"]
[ext_resource type="Texture2D" uid="uid://dlx03pgoywkfw" path="res://joystick/texture/5f394193cd6b2173f7a82981.png" id="81_nc8c3"]
[ext_resource type="Script" uid="uid://cqvwiesvk3vct" path="res://joystick/jousuck/addons/virtual_joystick/virtual_joystick.gd" id="82_qvknn"]
[ext_resource type="Texture2D" uid="uid://bm30au8mjfc2f" path="res://joystick/jousuck/addons/virtual_joystick/textures/joystick_base_outline.png" id="83_xsgbm"]
[ext_resource type="Texture2D" uid="uid://dt13r06u87fib" path="res://joystick/jousuck/addons/virtual_joystick/textures/joystick_tip_arrows.png" id="84_djclt"]
[ext_resource type="Script" uid="uid://bx8idcymi81ep" path="res://ui/pause.gd" id="89_iraf3"]
[ext_resource type="Texture2D" uid="uid://b2duhhcvfouem" path="res://текстуры/heart.png" id="90_87nqs"]
[ext_resource type="FontFile" uid="uid://bmd5csjp18eov" path="res://текстуры/font/upheaval-pro/Upheaval/UpheavalPro.ttf" id="91_d1y0c"]
[ext_resource type="Texture2D" uid="uid://no41veu2k2hv" path="res://текстуры/Untitled 12-08-2023 06-02-571.png" id="91_fpvj6"]
[ext_resource type="Script" uid="uid://dktx14jgtok82" path="res://label11.gd" id="95_d17l8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bv2w"]
size = Vector2(49, 45.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_yem3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_gbacm")
}, {
"duration": 1.0,
"texture": ExtResource("2_7ncr1")
}, {
"duration": 1.0,
"texture": ExtResource("3_17o13")
}, {
"duration": 1.0,
"texture": ExtResource("4_83el5")
}, {
"duration": 1.0,
"texture": ExtResource("5_ds0uf")
}, {
"duration": 1.0,
"texture": ExtResource("6_eldy8")
}, {
"duration": 1.0,
"texture": ExtResource("7_flhgb")
}, {
"duration": 1.0,
"texture": ExtResource("8_2lfeo")
}, {
"duration": 1.0,
"texture": ExtResource("9_r6qqh")
}, {
"duration": 1.0,
"texture": ExtResource("10_0xpfk")
}, {
"duration": 1.0,
"texture": ExtResource("11_errf3")
}, {
"duration": 1.0,
"texture": ExtResource("12_hl0fj")
}, {
"duration": 1.0,
"texture": ExtResource("13_uasq8")
}, {
"duration": 1.0,
"texture": ExtResource("15_edyxc")
}, {
"duration": 1.0,
"texture": ExtResource("14_vk6ch")
}, {
"duration": 1.0,
"texture": ExtResource("16_lld4l")
}, {
"duration": 1.0,
"texture": ExtResource("17_leqwp")
}, {
"duration": 1.0,
"texture": ExtResource("18_wgm1t")
}, {
"duration": 1.0,
"texture": ExtResource("19_1anmt")
}, {
"duration": 1.0,
"texture": ExtResource("20_sq808")
}, {
"duration": 1.0,
"texture": ExtResource("22_ltqd7")
}, {
"duration": 1.0,
"texture": ExtResource("21_1iryp")
}, {
"duration": 1.0,
"texture": ExtResource("23_cjbfv")
}, {
"duration": 1.0,
"texture": ExtResource("24_thfu4")
}],
"loop": true,
"name": &"hidel",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6pvwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("65_tq6ju")
}, {
"duration": 1.0,
"texture": ExtResource("66_rix2p")
}, {
"duration": 1.0,
"texture": ExtResource("67_jpdad")
}, {
"duration": 1.0,
"texture": ExtResource("68_tqp67")
}],
"loop": false,
"name": &"land",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"xex",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_awmoh"]
radius = 106.042

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cebvf"]
size = Vector2(100, 100)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dpgy2"]
radius = 11.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn4h3"]
size = Vector2(9, 5.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i85s"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcrkf"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p54a3"]
atlas = ExtResource("73_vihgm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg045"]
atlas = ExtResource("73_vihgm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x6n7"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc0w5"]
atlas = ExtResource("73_vihgm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm022"]
atlas = ExtResource("73_vihgm")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqmsi"]
atlas = ExtResource("73_vihgm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8aaj"]
atlas = ExtResource("73_vihgm")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2acp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i85s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcrkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p54a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg045")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x6n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc0w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm022")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqmsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8aaj")
}],
"loop": false,
"name": &"recharge",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rljtb"]
size = Vector2(100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwvdg"]
atlas = ExtResource("90_87nqs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwtlh"]
atlas = ExtResource("90_87nqs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c24f"]
atlas = ExtResource("90_87nqs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6vv36"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwvdg")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwtlh")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("91_fpvj6")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c24f")
}],
"loop": false,
"name": &"hp",
"speed": 1.0
}]

[sub_resource type="GDScript" id="GDScript_sk34d"]
script/source = "extends AnimatedSprite2D
@onready var anim = self

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	#лучший скрипт всего человечества(хуйня)
	$\"../Label\".text = \"salt:\" + str($\"../..\".salt)
	anim.play(\"hp\")
	if $\"../..\".health == 2:
		anim.play(\"1\")
	elif $\"../..\".health == 1:
		anim.play(\"2\")
	elif $\"../..\".health == 0:
		anim.play(\"3\")
"

[sub_resource type="LabelSettings" id="LabelSettings_v3gx4"]
font = ExtResource("91_d1y0c")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_uf1d1"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_evup4"]
polygon = PackedVector2Array(23, 70, 62, 70, 62, 68, 23, 68)

[node name="player" type="CharacterBody2D"]
show_behind_parent = true
top_level = true
script = ExtResource("1_8m1ne")
granade = ExtResource("2_l4htu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(43, 53.75)
shape = SubResource("RectangleShape2D_0bv2w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(-5, -25)
sprite_frames = ExtResource("3_pgbbb")
animation = &"hidel"
autoplay = "hidel"

[node name="tv" type="AnimatedSprite2D" parent="CollisionShape2D/AnimatedSprite2D"]
visible = false
sprite_frames = SubResource("SpriteFrames_yem3p")
animation = &"hidel"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D/AnimatedSprite2D"]
position = Vector2(0, 21.25)
sprite_frames = SubResource("SpriteFrames_6pvwi")
animation = &"land"
autoplay = "xex"

[node name="Camera2D" type="Camera2D" parent="CollisionShape2D"]
position = Vector2(-43.5, -175.5)
scale = Vector2(22.798, 0.913744)
process_callback = 0
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="recharge" type="RichTextLabel" parent="CollisionShape2D"]
offset_left = -56.5
offset_top = -71.5
offset_right = 69.5
offset_bottom = -36.5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true

[node name="mobile controller" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="mobile controller"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -322.0
offset_right = 3.0
offset_bottom = 324.0
grow_horizontal = 0
grow_vertical = 2

[node name="joystick" type="Area2D" parent="mobile controller/MarginContainer"]
visible = false
position = Vector2(98, 385)
scale = Vector2(0.639998, 0.64)
script = ExtResource("81_1mwr7")

[node name="big" type="Sprite2D" parent="mobile controller/MarginContainer/joystick"]
position = Vector2(2, 2)
scale = Vector2(0.5, 0.5)
texture = ExtResource("81_nc8c3")

[node name="small" type="Sprite2D" parent="mobile controller/MarginContainer/joystick/big"]
scale = Vector2(0.288, 0.296)
texture = ExtResource("81_nc8c3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mobile controller/MarginContainer/joystick"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_awmoh")

[node name="action" type="TouchScreenButton" parent="mobile controller/MarginContainer"]
position = Vector2(184, 358)
scale = Vector2(0.749132, 0.717117)
texture_normal = ExtResource("72_ql4mh")
texture_pressed = ExtResource("73_6v0j8")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_action_button"

[node name="jump" type="TouchScreenButton" parent="mobile controller/MarginContainer"]
position = Vector2(86, 601)
rotation = -1.5708
scale = Vector2(1.31367, 1.25753)
texture_normal = ExtResource("65_hrq5w")
texture_pressed = ExtResource("66_ibxnd")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_accept"

[node name="MarginContainer2" type="MarginContainer" parent="mobile controller"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -320.0
offset_right = 792.0
offset_bottom = 320.0
grow_vertical = 2

[node name="right" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(206, 487)
scale = Vector2(1.3073, 1.25143)
texture_normal = ExtResource("67_jfmbj")
texture_pressed = ExtResource("66_ibxnd")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_right_player"

[node name="left" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(169, 605)
rotation = -3.14159
scale = Vector2(1.25, 1.19658)
texture_normal = ExtResource("67_jfmbj")
texture_pressed = ExtResource("66_ibxnd")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_left_player"

[node name="eat_salt" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(18, 79)
scale = Vector2(0.749132, 0.717117)
texture_normal = ExtResource("68_6rhxx")
texture_pressed = ExtResource("69_aic7l")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_focus_next"

[node name="hit" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(19, 285)
scale = Vector2(0.749132, 0.717117)
texture_normal = ExtResource("70_h76ni")
texture_pressed = ExtResource("71_w2dpe")
shape = SubResource("RectangleShape2D_cebvf")
action = "ui_hit_player0"

[node name="1" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(559.291, 553.987)
scale = Vector2(0.677628, 0.713101)
texture_normal = ExtResource("74_276gg")
texture_pressed = ExtResource("75_6tot8")
shape = SubResource("RectangleShape2D_cebvf")
action = "1"

[node name="2" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(643, 554.516)
scale = Vector2(0.67763, 0.718015)
texture_normal = ExtResource("76_7ua45")
texture_pressed = ExtResource("77_tucw7")
shape = SubResource("RectangleShape2D_cebvf")
action = "2"

[node name="boom" type="TouchScreenButton" parent="mobile controller/MarginContainer2"]
position = Vector2(19.0002, 201)
scale = Vector2(0.76702, 0.749894)
texture_normal = ExtResource("78_y4fi5")
texture_pressed = ExtResource("79_ukxdx")
shape = SubResource("RectangleShape2D_cebvf")
action = "boom"

[node name="Virtual Joystick" type="Control" parent="mobile controller"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -161.0
offset_right = -93.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("82_qvknn")

[node name="Base" type="TextureRect" parent="mobile controller/Virtual Joystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -135.5
offset_right = 137.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
mouse_force_pass_scroll_events = false
texture = ExtResource("83_xsgbm")
stretch_mode = 5

[node name="Tip" type="TextureRect" parent="mobile controller/Virtual Joystick/Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("84_djclt")
stretch_mode = 5

[node name="Timer_invulnerability" type="Timer" parent="."]
wait_time = 2.0

[node name="hit" type="Area2D" parent="."]
position = Vector2(76, 65)

[node name="hit" type="CollisionShape2D" parent="hit"]
shape = SubResource("CapsuleShape2D_dpgy2")

[node name="hit2" type="Area2D" parent="."]
position = Vector2(8, 65)
monitorable = false

[node name="hit2" type="CollisionShape2D" parent="hit2"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_dpgy2")

[node name="blaster" type="Area2D" parent="."]
visible = false
position = Vector2(40, 50)
script = ExtResource("69_fr3kn")
bullet = ExtResource("2_xbhkx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="blaster"]
position = Vector2(54, -2)
shape = SubResource("RectangleShape2D_bn4h3")

[node name="Marker2D" type="Marker2D" parent="blaster"]
position = Vector2(57, -2)

[node name="blaster" type="AnimatedSprite2D" parent="blaster"]
position = Vector2(16, 0.999999)
scale = Vector2(3.55023, 3.55023)
sprite_frames = SubResource("SpriteFrames_2acp6")
autoplay = "default"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -319.0
offset_right = -7.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 2

[node name="pause" type="TouchScreenButton" parent="CanvasLayer/MarginContainer"]
process_mode = 3
position = Vector2(187, 67)
rotation = -3.14159
scale = Vector2(0.679915, 0.650859)
texture_normal = ExtResource("60_mu4fn")
texture_pressed = ExtResource("61_pwn7i")
shape = SubResource("RectangleShape2D_rljtb")
action = "ui_cancel"

[node name="pause" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -22.0
offset_right = 6.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("89_iraf3")

[node name="Panel" type="Panel" parent="CanvasLayer/pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -184.0
offset_right = 153.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/pause/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -148.0
offset_right = 115.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume" type="Button" parent="CanvasLayer/pause/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
text = "вернуться"

[node name="settings" type="Button" parent="CanvasLayer/pause/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
text = "настройки"

[node name="quit" type="Button" parent="CanvasLayer/pause/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
text = "выход в главное меню
"

[node name="Label" type="Label" parent="CanvasLayer/pause/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = -22.0
offset_right = 108.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
theme_override_font_sizes/font_size = 25
text = "           пауза"
vertical_alignment = 1

[node name="setting" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="CanvasLayer/setting"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 144.0
offset_top = 95.0
offset_right = 1006.0
offset_bottom = 579.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/setting/Panel"]
layout_mode = 0
offset_left = 87.0
offset_top = 40.0
offset_right = 781.0
offset_bottom = 444.0

[node name="controll" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "показать управление"

[node name="full screen" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "полный экран"

[node name="light" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "включить / выключить освещение"

[node name="quit_setting" type="Button" parent="CanvasLayer/setting/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("91_d1y0c")
action_mode = 0
text = "выйти"

[node name="heal" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(50, 45)
scale = Vector2(2.54687, 2.70944)
sprite_frames = SubResource("SpriteFrames_6vv36")
animation = &"hp"
autoplay = "hp"
script = SubResource("GDScript_sk34d")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 94.0
offset_top = 39.0
offset_right = 251.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 25
text = "salt :"
label_settings = SubResource("LabelSettings_v3gx4")

[node name="fps" type="Label" parent="CanvasLayer"]
offset_left = 94.0
offset_top = 61.0
offset_right = 176.0
offset_bottom = 121.0
label_settings = SubResource("LabelSettings_uf1d1")
script = ExtResource("95_d17l8")

[node name="music" type="Node" parent="."]

[node name="jump" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("67_v58pc")

[node name="land" type="AudioStreamPlayer" parent="music"]
stream = ExtResource("68_qmmh8")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_evup4")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="Timer_invulnerability" to="." method="_on_timer_invulnerability_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/pause/Panel/VBoxContainer/resume" to="CanvasLayer/pause" method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/pause/Panel/VBoxContainer/settings" to="CanvasLayer/pause" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/pause/Panel/VBoxContainer/quit" to="CanvasLayer/pause" method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/controll" to="CanvasLayer/pause" method="_on_controll_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/full screen" to="CanvasLayer/pause" method="_on_full_screen_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/light" to="." method="_on_light_pressed"]
[connection signal="pressed" from="CanvasLayer/setting/Panel/VBoxContainer/quit_setting" to="CanvasLayer/pause" method="_on_quit_setting_pressed"]
